<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/colorWhite"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

<!--    TODO 页面标题-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="@dimen/dp_30"
        android:orientation="horizontal"
        android:paddingStart="@dimen/dp_5"
        android:paddingEnd="@dimen/dp_5"
        android:gravity="center_vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_setting"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/NAL_setting_txt"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorBlue5D75FF"
            android:gravity="center_vertical"
            android:background="@color/colorWhite"
            android:padding="@dimen/dp_5"
            tools:ignore="RtlHardcoded" />

        <Button
            android:id="@+id/saveTV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAL_btn_ok"
            android:gravity="center"
            android:textSize="@dimen/sp_16"
            android:textColor="@color/colorBlue5D75FF"
            android:theme="@style/WhiteButtonStyle"
            android:textAllCaps="false"
            tools:ignore="RtlHardcoded" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_1"
        android:background="@color/colorBlackD3D3D3"/>

    <LinearLayout
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAL_setting_conn"
            android:textSize="@dimen/sp_14"/>

        <RadioGroup
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <RadioButton
                android:id="@+id/tcp_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_10"
                android:text="@string/NAL_device_tcp"
                android:checked="true"/>

            <RadioButton
                android:id="@+id/udp_rbtn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NAL_device_udp"/>

        </RadioGroup>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAL_setting_send"
            android:textSize="@dimen/sp_14"/>

        <LinearLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_show_send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/NAL_setting_send_show"/>

            <CheckBox
                android:id="@+id/cb_show_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/NAL_setting_send_time"/>

            <CheckBox
                android:id="@+id/cb_auto"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/NAL_setting_send_autot"/>

        </LinearLayout>

        <LinearLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cb_heartbeat"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/NAL_setting_heartbeat"/>

            <EditText
                android:id="@+id/edit_heartbeat_data"
                android:layout_width="@dimen/dp_80"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Data"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="32"
                android:digits="@string/NAL_rule_hexval"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="(HEX)"
                android:textColor="@color/colorBlack333333"
                android:gravity="center"/>

            <EditText
                android:id="@+id/edit_heartbeat_time"
                android:layout_width="@dimen/dp_60"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:hint="Time"
                android:lines="1"
                android:singleLine="true"
                android:maxLength="4"
                android:inputType="numberSigned" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="(s)"
                android:textColor="@color/colorBlack333333"/>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:padding="@dimen/dp_5"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAL_setting_rev"
            android:textSize="@dimen/sp_14"/>

        <LinearLayout
            android:padding="@dimen/dp_5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:gravity="center_vertical">

            <CheckBox
                android:id="@+id/cbrev_show_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/dp_5"
                android:text="@string/NAL_setting_send_time"/>

            <RadioGroup
                android:padding="@dimen/dp_5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ascii_rbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_10"
                    android:text="@string/NAL_setting_ascii"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/hex_rbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NAL_setting_hex"/>

            </RadioGroup>

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/dp_5"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/NAL_setting_endflag"
            android:textSize="@dimen/sp_14"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <RadioGroup
                android:padding="@dimen/dp_5"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/rn_rbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="@string/NAL_setting_end_rn"
                    android:checked="true"/>

                <RadioButton
                    android:id="@+id/n_rbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/dp_5"
                    android:text="@string/NAL_setting_end_n"/>

                <RadioButton
                    android:id="@+id/not_rn_rbtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/NAL_setting_end_other"/>

            </RadioGroup>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="@dimen/dp_5">

                <EditText
                    android:id="@+id/edit_hex_rn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="0D 0A"
                    android:inputType="text"
                    android:lines="1"
                    android:gravity="center_vertical"
                    android:paddingStart="@dimen/dp_10"
                    android:digits="@string/NAL_rule_hexval"
                    android:textColor="@color/colorBlack333333"
                    tools:ignore="RtlSymmetry" />

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>